Se agregó (304 Not Modified) en el put de ProfessionalServiceImpl.java